--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -29,3 +29,9 @@
     :why: 
     :versions: []
     :when: 2017-07-23 05:29:46.512605441 Z
+- - :whitelist
+  - ruby
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-08-31 10:52:40.141856322 Z
