Prefer old-school word-array delimiters

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,11 @@ Style/GuardClause:
 Style/Next:
   Enabled: false
 
+# Use older RuboCop default
+Style/PercentLiteralDelimiters:
+  PreferredDelimiters:
+    '%w': ()
+
 # Allow explicit return with multiple return values
 Style/RedundantReturn:
   AllowMultipleReturnValues: true
