--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: ruby
 
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install libgtk3.0-dev libgstreamer1.0-dev
+
 script: "xvfb-run bundle exec rake test"
 
 rvm:
