--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: ruby
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install libgtk-3-dev libgstreamer1.0-dev
+  - sudo apt-get install libgtk-3-dev
+  - sudo apt-get install libgstreamer1.0-dev
+  - sudo apt-get install gstreamer1.0-plugins-base
 
 script: "xvfb-run bundle exec rake test"
 
