--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - sudo apt-get install libgtk-3-dev
   - sudo apt-get install libgstreamer1.0-dev
   - sudo apt-get install gstreamer1.0-plugins-base
+  - sudo apt-get install gstreamer1.0-plugins-good
 
 script: "xvfb-run bundle exec rake test"
 
