--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - sudo apt-get install libgstreamer1.0-dev
   - sudo apt-get install gstreamer1.0-plugins-base
   - sudo apt-get install gstreamer1.0-plugins-good
+  - sudo apt-get install gstreamer1.0-plugins-bad
 
 script: "xvfb-run bundle exec rake test"
 
