--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sudo apt-get install gstreamer1.0-plugins-base
   - sudo apt-get install gstreamer1.0-plugins-good
   - sudo apt-get install gstreamer1.0-plugins-bad
+  - sudo apt-get install pulseaudio
 
 script: "xvfb-run bundle exec rake test"
 
