--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,22 @@
 language: ruby
 
+dist: xenial
+
+services:
+  - xvfb
+
 before_install:
   - sudo apt-get update
+  # Needed for gtk3 gem
   - sudo apt-get install libgtk-3-dev
+  # Needed for gstreamer gem
   - sudo apt-get install libgstreamer1.0-dev
+  # Needed to set up sound player pipeline
   - sudo apt-get install gstreamer1.0-plugins-base
   - sudo apt-get install gstreamer1.0-plugins-good
   - sudo apt-get install gstreamer1.0-plugins-bad
+  # Needed to play sound
   - sudo apt-get install pulseaudio
-
-script: "xvfb-run bundle exec rake test"
 
 rvm:
   - 2.4
