--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ before_install:
   # Needed to play sound
   - sudo apt-get install pulseaudio
 
+cache:
+  bundler: true
+
 rvm:
   - 2.4
   - 2.5
