--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,10 @@ require:
 AllCops:
   TargetRubyVersion: 2.4
 
+# Be lenient with line length
+Layout/LineLength:
+  Max: 92
+
 # Don't force lonely closing parentheses
 Layout/MultilineMethodCallBraceLayout:
   EnforcedStyle: same_line
@@ -22,26 +26,46 @@ Layout/MultilineOperationIndentation:
 Layout/SpaceBeforeBlockBraces:
   EnforcedStyleForEmptyBraces: space
 
+# Assume the programmer knows how bracketed block syntax works
+Lint/AmbiguousBlockAssociation:
+  Enabled: false
+
 # Allow if (foo = get_foo) style
 Lint/AssignmentInCondition:
   AllowSafeAssignment: true
+
+# Activate new cops from RuboCop 0.81 and 0.82
+Lint/RaiseException:
+  Enabled: true
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+Lint/StructNewOverride:
+  Enabled: true
 
 # Test describe blocks can be any size
 Metrics/BlockLength:
   Exclude:
     - 'test/**/*'
 
-# Require lines to fit in pull requests.
-Metrics/LineLength:
-  Max: 92
-
 # Allow and/or for control flow only
 Style/AndOr:
   EnforcedStyle: conditionals
 
+# Activate new cop from RuboCop 0.82
+Style/ExponentialNotation:
+  Enabled: true
+
 # Require at least two dependent lines before suggesting a guard clause
 Style/GuardClause:
   MinBodyLength: 2
+
+# Activate new cops from RuboCop 0.80
+Style/HashEachMethods:
+  Enabled: true
+Style/HashTransformKeys:
+  Enabled: true
+Style/HashTransformValues:
+  Enabled: true
 
 # Sometimes an if statement just looks better than next with a guard clause
 Style/Next:
@@ -54,6 +78,7 @@ Style/NumericPredicate:
 # Use older RuboCop default
 Style/PercentLiteralDelimiters:
   PreferredDelimiters:
+    '%W': ()
     '%w': ()
 
 # Allow explicit return with multiple return values
