--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -35,3 +35,9 @@
     :why: 
     :versions: []
     :when: 2018-08-31 10:52:40.141856322 Z
+- - :permit
+  - Simplified BSD
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2020-09-13 15:16:25.173745661 Z
