--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby: [2.7, "3.0", "3.1"]
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
 
     steps:
       - uses: actions/checkout@v3
@@ -50,7 +50,7 @@ jobs:
       - name: Run unit tests
         run: xvfb-run bundle exec rake test:unit
 
-  rubocop:
+  lint:
 
     runs-on: ubuntu-latest
 
@@ -69,7 +69,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: "3.2"
           bundler-cache: true
       - name: Run RuboCop
         run: bundle exec rubocop -P
